# dps

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  clippy.toml  deny.toml  flake.nix  git-stats-per-day.sh  mhchem_after.html  release-plz.toml  rustdoc-katex.html  update_output.txt
.cargo/: audit.toml  config.toml  deny.toml  mutants.toml
.config/: config.json5  nextest.toml
.github/workflows/: cargo-lock-update.yml  ci.yml  coverage.yml  flake-lock-update.yml  release-binaries.yml
lib/environment/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
lib/environment/src/: lake.rs  lib.rs  ocean.rs  physics.rs
lib/environment/src/dive_environment/: default.rs  display.rs  error.rs  from_impls.rs  from_str.rs  mod.rs
lib/environment/tests/: api.rs  physics.rs  presets.rs  serde.rs  workflow.rs
lib/gas/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  rustdoc-katex.html
lib/gas/src/: components.rs  constants.rs  error.rs  lib.rs  prelude.rs
lib/gas/src/blend/: membrane.rs  mod.rs  partial_pressure.rs  psa.rs
lib/gas/src/eanx/: detail.rs  equivalent_air_depth.rs  equivalent_narcotic_depth.rs  error.rs  maximum_narcotic_depth.rs  minimum_operating_depth.rs  mod.rs  operating_depth.rs  ppo2.rs
lib/gas/tests/: serde.rs
lib/git-stats/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
lib/git-stats/src/: args.rs  error.rs  git.rs  main.rs  render.rs  stats.rs
lib/units/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
lib/units/src/: bar.rs  celsius.rs  cns_rate_per_minute.rs  error.rs  grams_per_litre.rs  lib.rs  meters.rs  meters_per_bar.rs  otu_per_minute.rs  parts_per_thousand.rs  percent.rs
lib/units/src/macroses/: impl_percent_scaling.rs  mod.rs  unit_newtype.rs  unit_newtype_common.rs
src/: action.rs  app.rs  chord.rs  cli.rs  config.rs  errors.rs  gas.rs  lib.rs  logging.rs  main.rs  mode.rs  theme.rs  tui.rs  ui.rs  units.rs
src/action/: edit.rs  error.rs  mod.rs  movement.rs  prompt.rs  tab.rs  ui.rs
src/app/: error.rs  mod.rs
src/components/: fps.rs  hint_bar.rs  home.rs  mod.rs  mod_tab.rs  ppo2_tab.rs  tab_pane.rs  which_key.rs
src/config/: error.rs  keys.rs  mod.rs  raw_config.rs  theme.rs
src/environment/: dive_environment.rs  error.rs  lake.rs  mod.rs  ocean.rs  physics.rs
src/environment/dive_environment/: default.rs  display.rs  error.rs  from_impls.rs  from_str.rs  mod.rs
src/gas/: components.rs  constants.rs  error.rs  mod.rs
src/gas/blend/: membrane.rs  mod.rs  partial_pressure.rs  psa.rs
src/gas/eanx/: detail.rs  equivalent_air_depth.rs  equivalent_narcotic_depth.rs  error.rs  errors.rs  maximum_narcotic_depth.rs  minimum_operating_depth.rs  mod.rs  operating_depth.rs  ppo2.rs
src/keymap/: bindings.rs  chord.rs  error.rs  keys.rs  map.rs  mod.rs  mode.rs  seq.rs
src/keymap/bindings/: builder.rs  mod.rs  registry.rs
src/logging/: error.rs  mod.rs
src/registers/: clipboard.rs  error.rs  mod.rs  name.rs  store.rs  value.rs
src/units/: bar.rs  celsius.rs  cns_rate_per_minute.rs  error.rs  grams_per_litre.rs  meters.rs  meters_per_bar.rs  mod.rs  otu_per_minute.rs  parts_per_thousand.rs  percent.rs
