[package]
name = "dps"
version = "0.1.0"
edition = "2024"
authors = ["Mikalai Seva"]
description = "A terminal UI application for scuba dive planning"
license = "MIT"
repository = "https://github.com/asakura/dps"
readme = "README.md"
keywords = ["diving", "dive-planning", "scuba", "tui"]
categories = ["command-line-utilities"]

[lib]
doctest = false

[build-dependencies]
anyhow = "1.0"
vergen = { version = "9.1", features = ["build"] }
vergen-gix = "9.1"

[dependencies]
approx = "0.5"
arboard = "3.6"
better-panic = "0.3"
clap = { version = "4.6", features = ["derive", "cargo"] }
color-eyre = "0.6"
config = "0.15"
crossterm = { version = "0.29", features = ["event-stream", "serde"] }
directories = "6.0"
futures = "0.3"
human-panic = "2.0"
json5 = "1.3"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.4"
strip-ansi-escapes = "0.2"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
rstest = "0.26"
temp-env = "0.3"
tempfile = "3.27"

[profile.dev]
debug = 1

[profile.test]
debug = 1
split-debuginfo = "unpacked"

[profile.mutants]
inherits = "test"
debug = "none"
opt-level = 0

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"

[lints.rust]
# Safety — forbid means even #![allow(...)] can't override
unsafe_code = "forbid"
non_ascii_idents = "forbid"

# Quality enforcement
warnings = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }

# Documentation enforcement
missing_docs = "deny"
missing_debug_implementations = "deny"
missing_copy_implementations = "deny"
unfulfilled_lint_expectations = "deny"

[lints.rustdoc]
all = { level = "deny", priority = -1 }

[lints.clippy]
# All lint groups
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Guardrails
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"

# Code hygiene
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Async safety
await_holding_lock = "deny"
large_futures = "deny"

# Process and memory safety
exit = "deny"
mem_forget = "deny"

# Performance
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"

# Minimal relaxations
multiple_crate_versions = "allow"   # unavoidable with transitive deps

# Cast lints — too many false positives even for strict projects
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"

# Nursery lints that have too many false positives
cognitive_complexity = "allow"      # use clippy.toml threshold instead
