[package]
name = "dps-environment"
version = "0.1.0"
edition = "2024"
authors = ["Mikalai Seva"]
description = "Depth↔pressure conversion for variable dive environments"
license = "MIT"
repository = "https://github.com/asakura/dps"
readme = "README.md"
keywords = ["diving", "dive-planning", "scuba", "physics"]
categories = ["science"]

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
dps-units = { path = "../units" }
approx = "0.5"
thiserror = "2.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.strum]
version = "0.28"
features = ["derive"]

[dev-dependencies]
approx = "0.5"
rstest = "0.26"

[features]
serde = ["dep:serde", "dps-units/serde"]
