[package]
name = "dps-environment"
version = "0.1.0"
edition = "2024"
authors = ["Mikalai Seva"]
description = "Depth↔pressure conversion for variable dive environments"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asakura/dps"
readme = "README.md"
keywords = ["diving", "dive-planning", "scuba", "physics"]
categories = ["science"]

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
dps-units.workspace = true
approx.workspace = true
ryu.workspace = true
thiserror.workspace = true

[dependencies.serde]
workspace = true
optional = true

[dependencies.strum]
workspace = true

[dev-dependencies]
dps-units = { workspace = true, features = ["approx"] }
approx.workspace = true
rstest.workspace = true
serde_json.workspace = true

[features]
serde = ["dep:serde", "dps-units/serde"]
