[package]
name = "dps-gas"
version = "0.1.0"
edition = "2024"
authors = ["Mikalai Seva"]
description = "Gas mix types and blending models for dive planning"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asakura/dps"
readme = "README.md"
keywords = ["diving", "dive-planning", "scuba", "nitrox"]
categories = ["science"]

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
dps-units = { workspace = true, features = ["approx"] }
dps-environment.workspace = true
approx.workspace = true
thiserror.workspace = true

[dependencies.serde]
workspace = true
optional = true

[dev-dependencies]
approx.workspace = true
rstest.workspace = true
serde_json.workspace = true

[features]
serde = ["dep:serde", "dps-units/serde", "dps-environment/serde"]
