[package]
name = "dps-git-stats"
version = "0.1.0"
edition = "2024"
authors = ["Mikalai Seva"]
description = "Per-day git commit statistics: insertions, deletions, churn, rolling averages"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asakura/dps"
readme = "README.md"
keywords = ["git", "statistics", "productivity", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "dps-git-stats"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anstream = "1.0"
anstyle = "1.0"
catppuccin = "2.8"
thiserror = "2.0"

[dependencies.clap]
version = "4.6"
features = ["derive", "cargo"]

[dependencies.gix]
version = "0.84"
features = ["revision", "blob-diff"]

[dependencies.polars]
version = "0.54"
features = [
    "cum_agg",
    "dtype-date",
    "fmt",
    "lazy",
    "rolling_window",
    "round_series",
    "strings",
    "temporal",
]

[dev-dependencies]
rstest = "0.26"
