[package]
name = "dps-git-stats"
version = "0.1.0"
edition = "2024"
authors = ["Mikalai Seva"]
description = "Per-day git commit statistics: insertions, deletions, churn, rolling averages"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asakura/dps"
readme = "README.md"
keywords = ["git", "statistics", "productivity", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "dps-git-stats"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anstream.workspace = true
anstyle.workspace = true
catppuccin.workspace = true
thiserror.workspace = true

[dependencies.clap]
workspace = true

[dependencies.gix]
workspace = true

[dependencies.polars]
workspace = true

[dev-dependencies]
rstest.workspace = true
