[package]
name = "dps-units"
version = "0.1.0"
edition = "2024"
authors = ["Mikalai Seva"]
description = "Newtype wrappers for physical units used in dive calculations"
license = "MIT"
repository = "https://github.com/asakura/dps"
readme = "README.md"
keywords = ["diving", "dive-planning", "scuba", "units"]
categories = ["science"]

[lints]
workspace = true

[dependencies]
approx = "0.5"
thiserror = "2.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true 

[dev-dependencies]
approx = "0.5"
rstest = "0.26"

[features]
serde = ["dep:serde"]
