[package]
name = "dps-units"
version = "0.1.0"
edition = "2024"
authors = ["Mikalai Seva"]
description = "Newtype wrappers for physical units used in dive calculations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asakura/dps"
readme = "README.md"
keywords = ["diving", "dive-planning", "scuba", "units"]
categories = ["science"]

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
ryu.workspace = true
thiserror.workspace = true

[dependencies.approx]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[dev-dependencies]
approx.workspace = true
rstest.workspace = true

[features]
approx = ["dep:approx"]
serde = ["dep:serde"]
